# sistema-web-financeiro

./: .env  .env.example  AI_CONTEXT.md  DEPLOY.md  Dockerfile  LICENSE  PROD_RUNBOOK.md  README.md  alembic.ini  dev.db  docker-compose.yml  pyproject.toml  requirements.txt
financas_app/: __main__.py  cli.py
financas_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
financas_app/app/: deps.py  main.py  routes.py  settings.py
financas_app/app/common/: dates.py  email.py  finance.py  money.py  pdf.py  rate_limit.py  security.py  tasks.py
financas_app/app/db/: engine.py  models.py
financas_app/app/db/migrations/: env.py
financas_app/app/modules/accounts/: models.py  repo.py  routes_html.py  service.py
financas_app/app/templates/: base.html  home.html
financas_app/scripts/: generate_notifications.py
financas_app/templates/recurring/: index.html
tests/: conftest.py  test_account_timezone.py  test_audit_notifications.py  test_audit_ui.py  test_auth_flow.py  test_avatar_profile.py  test_budgets.py  test_categories.py  test_csv_import_export.py  test_dashboard_reports.py  test_dates.py  test_finance_common.py  test_financial_rules.py  test_goals.py  test_health_check.py  test_integration_e2e.py  test_main_startup.py  test_notifications_ui.py  test_postgres_migrations.py  test_postgres_smoke.py  test_rate_limit.py  test_recurring.py  test_script_generate_notifications.py  test_settings.py  test_transactions_import_api.py  test_transactions_import_html.py  test_transactions_import_preview_html.py  test_transactions_new.py
(+72 files in other folders)
